feat: added the ability to edit a label entry and delete it
