# main-server/constants/routes/map.js
@@ -4,6 +4,8 @@ const MapRoute = {
     marks: '/marks',
     marksFree: '/marks/free',
     markCreate: '/mark/create',
+    markUpdate: '/mark/update',
+    markDelete: '/mark/delete',
 
     geocoder: '/geocoder',
     geocoderAddress: '/geocoder/address',
