# main-server/services/map/map-service.js
@@ -3,6 +3,9 @@ dotenv.config({ path: `.${process.env.NODE_ENV}.env` });
 import ApiError from '../../exceptions/api-error.js';
 import db from '../../db/index.js';
 import { isUndefinedOrNull } from '../../utils/objector.js';
+import MarkIdDto from '../../dtos/map/mark-id-dto.js';
+import MarkCreateDto from '../../dtos/map/mark-create-dto.js';
+import GameStatus from '../../constants/status/game-status.js';
 
 /* Сервис управления картами */
 class MapService {
@@ -47,10 +50,10 @@ class MapService {
             });
 
             if (mark) {
-                throw ApiError.BadRequest("Метка по данным координатам уже существует!");
+                throw ApiError.BadRequest(`Метка с координатами (${lat}; ${lng}) уже существует!`);
             }
 
-            await db.Marks.create({
+            const newMark = await db.Marks.create({
                 title: title,
                 description: description,
                 lat: lat,
@@ -61,7 +64,160 @@ class MapService {
 
             await t.commit();
 
-            return data;
+            return new MarkCreateDto(newMark.dataValues);
+        } catch (e) {
+            await t.rollback();
+            throw ApiError.BadRequest(e.message);
+        }
+    }
+
+    /**
+     * Обновление метки по её идентификатору
+     * @param {*} data Информация для обновления метки
+     * @returns Обновлённая метка
+     */
+    async markUpdateById(data) {
+        const t = await db.sequelize.transaction();
+
+        try {
+            const { id, title, description, lat, lng, location, users_id } = data;
+            const user = await db.Users.findOne({ where: { id: users_id } });
+
+            if (!user) {
+                throw ApiError.BadRequest("Попытка обновления метки неавторизованным пользователем");
+            }
+
+            // Поиск прав доступа для создания метки
+            const userRoles = await db.UsersRoles.findAll({
+                where: {
+                    users_id: users_id
+                },
+                include: {
+                    model: db.Roles,
+                    where: {
+                        priority: { [db.Sequelize.Op.gt]: 1 }
+                    },
+                },
+            });
+
+            if (userRoles.length === 0) {
+                throw ApiError.Forbidden("Нет доступа");
+            }
+
+            const mark = await db.Marks.findOne({
+                where: {
+                    id: id
+                }
+            });
+
+            if (!mark) {
+                throw ApiError.BadRequest(`Метки с идентификатором ${id} не найдено.`);
+            }
+
+            const markUnique = await db.Marks.findOne({
+                where: {
+                    lat: lat,
+                    lng: lng
+                }
+            });
+
+            if (markUnique && (markUnique.id !== id)) {
+                throw ApiError.BadRequest(`Метка с координатами (${lat}; ${lng}) уже существует!`);
+            }
+
+            mark.title = title;
+            mark.description = description;
+            mark.lat = lat;
+            mark.lng = lng;
+            mark.location = location;
+
+            await mark.save({ transaction: t });
+            await t.commit();
+
+            return new MarkCreateDto(mark.dataValues);
+        } catch (e) {
+            await t.rollback();
+            throw ApiError.BadRequest(e.message);
+        }
+    }
+
+    /**
+     * Удаление метки по её идентификатору
+     * @param {MarkIdDto} data Информация для удаления метки
+     * @returns Удалённая
+     */
+    async markDeleteById(data) {
+        const t = await db.sequelize.transaction();
+
+        try {
+            const { id, users_id } = data;
+            const user = await db.Users.findOne({ where: { id: users_id } });
+
+            if (!user) {
+                throw ApiError.BadRequest("Попытка удаления метки неавторизованным пользователем");
+            }
+
+            // Поиск прав доступа для создания метки
+            const userRoles = await db.UsersRoles.findAll({
+                where: {
+                    users_id: users_id
+                },
+                include: {
+                    model: db.Roles,
+                    where: {
+                        priority: { [db.Sequelize.Op.gt]: 1 }
+                    },
+                },
+            });
+
+            if (userRoles.length === 0) {
+                throw ApiError.Forbidden("Нет доступа");
+            }
+
+            const mark = await db.Marks.findOne({
+                where: {
+                    id: id
+                }
+            });
+
+            if (!mark) {
+                throw ApiError.BadRequest(`Метки с идентификатором ${id} не найдено.`);
+            }
+
+            let execQuests = await db.ExecQuests.findAll({
+                where: {
+                    status: GameStatus.ACTIVE
+                },
+                include: {
+                    model: db.Quests,
+                    include: {
+                        model: db.Marks,
+                        where: {
+                            id: id
+                        }
+                    }
+                },
+            });
+
+            execQuests = execQuests.filter((value) => {
+                if(isUndefinedOrNull(value?.quest) || isUndefinedOrNull(value?.quest?.mark)) {
+                    return false; 
+                }
+
+                return true;
+            });
+
+            if (!isUndefinedOrNull(execQuests) && execQuests.length > 0) {
+                throw ApiError.BadRequest(`Метка с идентификатором ${id} используется в ${execQuests.length} активных игровых сессиях.`);
+            }
+
+            // Удаление метки
+            await mark.destroy({ transaction: t });
+
+            // фиксация изменений
+            await t.commit();
+
+            return new MarkCreateDto(mark.dataValues);
         } catch (e) {
             await t.rollback();
             throw ApiError.BadRequest(e.message);
@@ -79,7 +235,7 @@ class MapService {
             const user = await db.Users.findOne({ where: { id: users_id } });
 
             if (!user) {
-                throw ApiError.BadRequest("Попытка получение информации о метке не авторизованным пользователем");
+                throw ApiError.BadRequest("Попытка получения информации о метке не авторизованным пользователем");
             }
 
             const value = await db.Marks.findOne({
