# web-crm/src/constants/api/map.api.ts
@@ -1,6 +1,8 @@
 const MapApi = {
     MARKS_FREE: "/map/marks/free",
-    MARK_CREATE: "/map/mark/create"
+    MARK_CREATE: "/map/mark/create",
+    MARK_UPDATE: "/map/mark/update",
+    MARK_DELETE: "/map/mark/delete"
 };
 
 export default MapApi;
